--- a/Old Code/test4.html
+++ b/Old Code/test4.html
@@ -1,147 +1,147 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Bootstrap demo</title>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fiery Login Form</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: url('login_bg.jpg') no-repeat center center fixed;
+            background-size: cover;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: hidden;
+        }
 
-      <style>
-            /* Modal animation */
-            .modal-dialog {
-                  transform: scale(0.8);
-                  transition: transform 0.3s ease-in-out;
-            }
+        .login-container {
+            background: rgba(0, 0, 0, 0.8);
+            padding: 20px 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(255, 69, 0, 0.8);
+            text-align: center;
+            width: 350px;
+        }
 
-            .modal.fade.show .modal-dialog {
-                  transform: scale(1);
-                  /* Pop-out effect */
-            }
+        .login-container h1 {
+            font-size: 2rem;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            background: linear-gradient(to right, #ff4500, #ffa500);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
 
-            /* SVG Trophy Animation */
-            svg {
-                  animation: bounce 2s infinite;
-            }
+        .login-container label {
+            display: block;
+            text-align: left;
+            margin: 10px 0 5px;
+            font-size: 14px;
+        }
 
-            @keyframes bounce {
+        .login-container input {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            outline: none;
+            font-size: 14px;
+        }
 
-                  0%,
-                  100% {
-                        transform: translateY(0);
-                  }
+        .login-container input[type="text"],
+        .login-container input[type="password"] {
+            background: rgba(255, 255, 255, 0.1);
+            color: white;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
 
-                  50% {
-                        transform: translateY(-10px);
-                  }
-            }
+        .login-container .password-container {
+            position: relative;
+        }
 
-            /* Button Styling */
-            #nextQuestionBtn {
-                  background-color: #00c853;
-                  color: white;
-                  border: none;
-                  transition: background-color 0.3s ease-in-out, transform 0.2s;
-            }
+        .login-container .password-container .show-password {
+            position: absolute;
+            top: 50%;
+            right: 10px;
+            transform: translateY(-50%);
+            cursor: pointer;
+            color: #ffa500;
+            font-size: 16px;
+        }
 
-            #nextQuestionBtn:hover {
-                  background-color: #00e676;
-                  transform: scale(1.05);
-            }
-      </style>
+        .login-container button {
+            margin-top: 20px;
+            background: linear-gradient(to right, #ff4500, #ffa500);
+            color: white;
+            border: none;
+            padding: 10px;
+            width: 100%;
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: 0.3s;
+        }
 
+        .login-container button:hover {
+            background: linear-gradient(to right, #ff6347, #ff4500);
+        }
 
+        .login-container .links {
+            margin-top: 15px;
+            font-size: 14px;
+        }
 
+        .login-container .links a {
+            color: #ffa500;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        .login-container .links a:hover {
+            color: #ff4500;
+        }
+    </style>
 </head>
-
 <body>
+    <div class="login-container">
+        <h1>Angaar Login</h1>
+        <form>
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" placeholder="Enter your username" required>
 
-      <!-- Success Modal -->
-      <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                  <div class="modal-content"
-                        style="background-color: #1e1e2f; color: #e0e0e0; border: 2px solid #fe7d14; border-radius: 15px;">
-                        <div class="modal-header"
-                              style="border-bottom: 1px solid #fe7d14; text-align: center; justify-content: center;">
-                              <h5 class="modal-title" id="successModalLabel" style="font-weight: bold; color: #fe7d14;">
-                                    🎉 Congratulations! 🎉
-                              </h5>
-                        </div>
-                        <div class="modal-body text-center">
-                              <!-- Trophy or celebratory SVG -->
-                              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                                    xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512.00 512.00"
-                                    xml:space="preserve" width="87px" height="87px" fill="#000000" stroke="#000000"
-                                    stroke-width="0.00512" transform="rotate(0)">
-                                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                                    <g id="SVGRepo_iconCarrier">
-                                          <path style="fill:#ECF0F1;"
-                                                d="M369.059,52.352v153.537c0,14.104-3.141,27.6-7.329,40.049v0.01 c-16.753,42.384-57.426,72.497-105.474,72.497c-47.975,0-88.98-30.018-105.157-72.298c-0.031-0.063-0.117-0.136-0.138-0.199 c-2.974-7.779-5.095-15.978-6.257-24.469c-0.346-2.544-0.463-5.11-0.641-7.706c-0.178-2.607-0.117-5.235-0.117-7.884V52.352H369.059 z">
-                                          </path>
-                                          <rect x="229.813" y="319.869" style="fill:#ff9742;" width="52.352"
-                                                height="76.434"></rect>
-                                          <path style="fill:#ECF0F1;"
-                                                d="M329.283,448.654H182.698v-20.581c0-17.546,14.224-31.771,31.771-31.771h83.043 c17.546,0,31.771,14.224,31.771,31.771v20.581H329.283z">
-                                          </path>
-                                          <g>
-                                                <path style="fill:#ff9742;"
-                                                      d="M371.164,501.006H140.816v-20.581c0-17.546,14.224-31.771,31.771-31.771h166.806 c17.546,0,31.771,14.224,31.771,31.771v20.581H371.164z">
-                                                </path>
-                                                <rect x="143.433" y="9.566" style="fill:#ff9742;" width="225.112"
-                                                      height="41.881"></rect>
-                                                <path style="fill:#ff9742;"
-                                                      d="M151.039,245.948c-31.17-4.24-59.223-18.711-80.415-39.892 c-25.453-25.453-41.255-60.163-41.255-98.997c0-24.679,19.944-44.237,44.623-44.237h69.956v41.881H74.002 c-1.55,0-2.454,0.806-2.454,2.356c0,45.2,30.517,82.957,72.398,94.631v4.199C143.947,219.992,146.286,233.499,151.039,245.948z">
-                                                </path>
-                                                <path style="fill:#ff9742;"
-                                                      d="M482.67,107.059c0,38.835-15.737,73.769-41.19,99.222c-21.171,21.161-48.894,35.498-80.024,39.768 c4.754-12.449,7.603-26.059,7.603-40.161v-4.146c40.834-11.601,71.993-49.41,71.993-94.683c0-1.55-1.519-2.356-3.069-2.356h-68.923 V62.822h68.923C462.661,62.822,482.67,82.381,482.67,107.059z">
-                                                </path>
-                                                <path style="fill:#ff9742;"
-                                                      d="M314.82,181.996c0,9.537-14.27,15.332-18.725,23.034c-4.596,7.945-2.637,23.153-10.582,27.751 c-7.701,4.455-19.789-4.714-29.325-4.714c-9.537,0-21.624,9.17-29.325,4.714c-7.945-4.596-5.986-19.806-10.582-27.751 c-4.455-7.701-18.726-13.496-18.726-23.034s14.27-15.332,18.725-23.034c4.596-7.945,2.637-23.153,10.582-27.751 c7.701-4.456,19.789,4.714,29.325,4.714c9.537,0,21.624-9.17,29.325-4.714c7.945,4.596,5.986,19.806,10.582,27.751 C300.55,166.663,314.82,172.458,314.82,181.996z">
-                                                </path>
-                                          </g>
-                                          <g>
-                                                <path style="fill:#231F20;"
-                                                      d="M368.757,255.406c30.472-5.416,58.07-19.807,80.124-41.852 c28.54-28.54,44.259-66.191,44.259-106.495c0-30.311-24.743-54.708-55.157-54.708h-58.453c0-1.047,0-1.877,0-2.526V9.566 c0-5.783-5.202-9.566-10.983-9.566H143.435c-5.782,0-9.957,3.783-9.957,9.566v41.881c0,0.129-0.498-0.142-0.494,0.905H73.992 c-30.401,0-55.133,24.388-55.133,54.698c0,40.226,15.726,77.966,44.283,106.524c21.807,21.795,50.146,36.46,80.351,41.837 c9.052,20.653,23.513,38.302,42.126,51.346c10.426,7.306,22.196,12.842,33.713,16.576v63.023h-4.865 c-23.292,0-42.252,18.426-42.252,41.718v10.12c-23.035,0.195-41.881,19.061-41.881,42.232v20.581 c0,5.783,4.698,10.994,10.481,10.994h230.348c5.782,0,10.46-5.211,10.46-10.994v-20.581c0-23.171-18.847-42.037-41.881-42.232 v-10.12c0-23.292-18.939-41.718-42.231-41.718h-4.885v-62.974C326.131,313.015,353.777,288.661,368.757,255.406z M82.214,115.174 h51.263v71.538C105.207,173.57,85.054,145.538,82.214,115.174z M379.53,115.174h50.54c-2.835,30.364-22.27,58.376-50.54,71.562 V115.174z M437.983,73.292c18.869,0,34.218,15.004,34.218,33.767c0,34.71-13.54,67.234-38.123,91.817 c-16.244,16.235-35.974,27.586-57.758,33.471c1.671-7.529,2.622-15.211,2.843-22.923c42.885-15.496,72.201-56.357,72.201-102.349 c0-7.217-6.003-12.843-13.381-12.843h-58.453v-20.94H437.983z M154.417,20.941h204.172v20.941H154.417L154.417,20.941 L154.417,20.941z M77.948,198.653c-24.6-24.601-38.149-56.961-38.149-91.594c0-18.763,15.339-33.767,34.193-33.767h59.485v20.941 H74.002c-7.337,0-13.083,5.488-13.083,12.826c0,24.3,7.814,47.135,22.597,66.286c12.701,16.453,30.134,29.018,49.689,36.066 c0.005,0.192,0.216,12.659,2.723,22.863C114.169,226.347,94.005,214.702,77.948,198.653z M160.799,242.405 c-0.076-0.199,0-0.396-0.088-0.589c-2.621-6.945-6.294-24.425-6.294-35.927V62.822h204.172v143.067 c0,11.082-2.356,23.028-6.875,36.515c-15.889,39.843-53.401,65.571-95.538,65.571C214.182,307.975,175.805,281.625,160.799,242.405 z M360.683,480.426v10.634H151.276v-10.634c0-11.746,9.566-20.777,21.311-20.777h166.806 C351.138,459.648,360.683,468.68,360.683,480.426z M318.802,428.074v10.634H193.157v-10.634c0-11.746,9.566-20.777,21.311-20.777 h83.043C309.257,407.297,318.802,416.328,318.802,428.074z M271.685,386.356h-31.411V327.89c5.235,0.668,10.487,1.025,15.813,1.025 c5.27,0,10.363-0.352,15.598-1.002V386.356z">
-                                                </path>
-                                                <path style="fill:#231F20;"
-                                                      d="M265.132,240.953c4.656,1.641,10.016,3.531,15.5,3.531c3.372,0,6.792-0.715,10.123-2.642 c8.961-5.184,10.768-15.102,12.221-23.074c0.589-3.233,1.256-6.898,2.181-8.497c0.823-1.422,3.681-3.814,5.978-5.737 c5.974-5.003,14.157-11.853,14.157-22.54c0-10.686-8.182-17.537-14.157-22.54c-2.296-1.922-5.155-4.316-5.976-5.737 c-0.926-1.6-1.594-5.264-2.183-8.498c-1.453-7.97-3.26-17.889-12.219-23.071c-8.745-5.06-18.103-1.763-25.624,0.888 c-3.215,1.134-6.861,2.419-8.946,2.419c-2.085,0-5.73-1.285-8.946-2.419c-7.517-2.649-16.875-5.95-25.623-0.888 c-8.961,5.184-10.768,15.102-12.22,23.074c-0.589,3.233-1.257,6.897-2.182,8.496c-0.823,1.422-3.681,3.815-5.978,5.738 c-5.974,5.003-14.157,11.853-14.157,22.54c0,10.686,8.182,17.538,14.157,22.54c2.296,1.923,5.155,4.317,5.976,5.737 c0.926,1.6,1.594,5.264,2.183,8.498c1.453,7.97,3.26,17.889,12.22,23.072c8.744,5.059,18.103,1.762,25.623-0.889 c3.215-1.134,6.861-2.419,8.946-2.419S261.916,239.82,265.132,240.953z M240.279,221.204c-2.428,0.855-6.329,2.23-8.146,2.332 c-0.878-1.629-1.653-5.881-2.134-8.521c-0.895-4.912-1.91-10.479-4.658-15.229c-2.672-4.618-6.732-8.018-10.659-11.306 c-2.226-1.864-5.882-4.926-6.603-6.484c0.72-1.558,4.377-4.621,6.603-6.484c3.926-3.288,7.987-6.686,10.66-11.306 c2.747-4.75,3.762-10.317,4.657-15.228c0.481-2.64,1.255-6.893,2.134-8.521c1.816,0.101,5.718,1.476,8.146,2.332 c4.8,1.692,10.24,3.609,15.907,3.609s11.107-1.917,15.907-3.609c2.428-0.855,6.329-2.231,8.146-2.332 c0.877,1.629,1.653,5.881,2.134,8.521c0.895,4.912,1.91,10.479,4.658,15.229c2.672,4.618,6.732,8.018,10.659,11.305 c2.226,1.864,5.882,4.926,6.603,6.484c-0.72,1.558-4.377,4.621-6.603,6.484c-3.926,3.288-7.987,6.686-10.66,11.306 c-2.747,4.75-3.762,10.317-4.657,15.229c-0.481,2.64-1.255,6.893-2.134,8.521c-1.816-0.101-5.718-1.475-8.146-2.332 c-4.8-1.692-10.239-3.609-15.907-3.609S245.079,219.512,240.279,221.204z">
-                                                </path>
-                                          </g>
-                                    </g>
-                              </svg>
-                              <p style="font-size: 1.2rem;">
-                                    All test cases passed!
-                              </p>
-                        </div>
-                        <div class="modal-footer" style="border-top: 1px solid #fe7d14; justify-content: center;">
-                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                              <button type="button" class="btn btn-success" id="nextQuestionBtn">Next Question</button>
-                        </div>
-                  </div>
+            <label for="password">Password</label>
+            <div class="password-container">
+                <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                <span class="show-password" onclick="togglePassword()">👁️</span>
             </div>
-      </div>
 
+            <button type="submit">Login</button>
 
+            <div class="links">
+                <p><a href="#">Forgot Password?</a></p>
+                <p>Already have an account? <a href="#">Sign up</a></p>
+            </div>
+        </form>
+    </div>
 
+    <script>
+        function togglePassword() {
+            const passwordField = document.getElementById('password');
+            const passwordIcon = document.querySelector('.show-password');
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-
-
-      <script>
-            const successModal = new bootstrap.Modal(document.getElementById('successModal'), {
-                  keyboard: false
-            });
-
-            successModal.show();
-
-            document.getElementById('nextQuestionBtn').addEventListener('click', () => {
-                  window.location.href = 'test5.html';
-            });
-      </script>
+            if (passwordField.type === 'password') {
+                passwordField.type = 'text';
+                passwordIcon.textContent = '🙈';
+            } else {
+                passwordField.type = 'password';
+                passwordIcon.textContent = '👁️';
+            }
+        }
+    </script>
 </body>
-
 </html>
