--- a/Old Code/login.html
+++ b/Old Code/login.html
@@ -1,354 +1,140 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'home/base.html' %}
+{% load static %}
+{% block title %}Reset Password - Angaari Theme{% endblock %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/home/css/index.css' %}">
 
-    <style>
-        .form {
-            position: relative;
-            display: block;
-            padding: 2.2rem;
-            height: 85vh;
-            background: linear-gradient(14deg,
-                    rgba(2, 0, 36, 0.8) 0%,
-                    rgba(24, 24, 65, 0.7) 66%,
-                    rgb(20, 76, 99) 100%),
-                radial-gradient(circle,
-                    rgba(2, 0, 36, 0.5) 0%,
-                    rgba(32, 15, 53, 0.2) 65%,
-                    rgba(14, 29, 28, 0.9) 100%);
-            border: 2px solid #fff;
-            -webkit-box-shadow: rgba(0, 212, 255) 0px 0px 50px -15px;
-            box-shadow: rgba(0, 212, 255) 0px 0px 50px -15px;
-            overflow: hidden;
-            z-index: +1;
-            border-radius: 8px;
-        }
+<style>
+  body {
+    background-image: url("{% static 'img/accounts/login_bg.jpg' %}");
+    background-size: contain;
 
-        /*------input and submit section-------*/
+    background-attachment: fixed;
 
-        .input-container {
-            position: relative;
-        }
+  }
 
-        .input-container input,
-        .form button {
-            outline: none;
-            border: 2px solid #ffffff;
-            margin: 8px 0;
-            font-family: monospace;
-            border-radius: 4px;
-        }
+  .input-container {
+    position: relative;
+  }
 
-        .input-container input {
-            background-color: #fff;
-            padding: 6px;
-            font-size: 0.875rem;
-            line-height: 1.25rem;
-            width: 250px;
-            box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-        }
+  .validation-icon {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    width: 20px;
+    height: 20px;
+    background-size: cover;
+    display: none;
+  }
 
-        .input-mail:focus::placeholder {
-            opacity: 0;
-            transition: opacity 0.9s;
-        }
+  #password-input:valid+.validation-icon {
+    background-image: url('https://img.icons8.com/glyph-neue/64/40C057/double-tick.png');
+    /* Replace with your green check icon image path */
+    display: block;
+  }
 
-        .input-pwd:focus::placeholder {
-            opacity: 0;
-            transition: opacity 0.9s;
-        }
+  #password-input:invalid+.validation-icon {
+    background-image: url('https://img.icons8.com/emoji/48/cross-mark-emoji.png');
+    /* Replace with your red cross icon image path */
+    display: block;
+  }
 
-        .submit {
-            position: relative;
-            display: block;
-            padding: 8px;
-            background: linear-gradient(90deg, #243949 0%, #517fa4 100%);
-            color: #ffffff;
-            text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-            font-size: 0.875rem;
-            line-height: 1.25rem;
-            font-weight: 500;
-            width: 100%;
-            text-transform: uppercase;
-            overflow: hidden;
-        }
+  #my-alert {
+    width: 60%;
+  }
 
-        .submit:hover {
-            -webkit-transition: all 0.2s ease-out;
-            -moz-transition: all 0.2s ease-out;
-            transition: all 0.2s ease-out;
-            box-shadow: 4px 5px 17px -4px #ffffff;
-            cursor: pointer;
-        }
+  @media (max-width: 768px) {
+    #my-alert {
+      width: 100%;
+    }
+  }
+</style>
 
-        .submit:hover::before {
-            -webkit-animation: sh02 0.5s 0s linear;
-            -moz-animation: sh02 0.5s 0s linear;
-            animation: sh02 0.5s 0s linear;
-        }
+{% endblock %}
 
-        .submit::before {
-            content: "";
-            display: block;
-            width: 0px;
-            height: 85%;
-            position: absolute;
-            top: 50%;
-            left: 0%;
-            opacity: 0;
-            background: #fff;
-            box-shadow: 0 0 50px 30px #fff;
-            -webkit-transform: skewX(-20deg);
-            -moz-transform: skewX(-20deg);
-            -ms-transform: skewX(-20deg);
-            -o-transform: skewX(-20deg);
-            transform: skewX(-20deg);
-        }
+{% block body %}
+<!-- oncontextmenu="return false" -->
 
-        @keyframes sh02 {
-            from {
-                opacity: 0;
-                left: 0%;
-            }
+      <div class="page-header min-vh-100">
+        <div class="container mt-5" style="height: 90vh;">
 
-            50% {
-                opacity: 1;
-            }
 
-            to {
-                opacity: 0;
-                left: 100%;
-            }
-        }
+          <div class="row m-0" id="my-alert">
+            <div class="alert alert-secondary fade show" role="alert">
+              <span class="alert-text text-white"><strong>Sun! </strong>Ab Aaya H To Kuch Seekh Ke Ja</span>
+            </div>
 
-        /*--------signup section---------*/
+            <a href="{% url 'home' %}" class="btn btn-sm mb-n1 btn-outline-white float-end mt-n1">
+              Home
+            </a>
 
-        .signup-link {
-            color: #c0c0c0;
-            font-size: 0.875rem;
-            line-height: 1.25rem;
-            text-align: center;
-            font-family: monospace;
-        }
+          </div>
 
-        .signup-link a {
-            color: #fff;
-            text-decoration: none;
-        }
+          {% for message in messages %}
 
-        .up:hover {
-            text-decoration: underline;
-        }
+          <div>
+            <div class="col-md-7 m-0 mt-3 alert {{ message.tags }} fade show" role="alert">
+              <span class="alert-text text-white"><strong>{{ message.tag }}</strong>{{ message }}</span>
+            </div>
+          </div>
 
-        /*--------header section-----------*/
+          {% endfor %}
 
-        .form-title {
-            font-size: 1.25rem;
-            line-height: 1.75rem;
-            font-family: monospace;
-            font-weight: 600;
-            text-align: center;
-            color: #fff;
-            text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7);
-            animation-duration: 1.5s;
-            overflow: hidden;
-            transition: 0.12s;
-        }
+          <div class="overlay"></div>
+          <div class="container">
+            <div class="login-container">
+              <button class="home-btn" type="button">Home</button>
+              <form class="login-form">
+                <img src="logo.png" alt="Angaar Logo">
+                <h2>Welcome Back</h2>
+                <input type="text" placeholder="Username" required>
+                <div class="password-container" style="position:relative;">
+                  <input type="password" placeholder="Password" required id="password">
+                  <span class="show-password" onclick="togglePassword()">👁️</span>
+                </div>
+                <button type="submit">Login</button>
+                <a href="your-link-here" target="_blank" class="join-us">
+                  Want To Become Angaari Aawam? <span class="orange-text">Join Us</span>
+                </a>
+                <div class="message">
+                  <!-- Sun! Aaya H To Seekh Ke Ja! 😎 -->
+                </div>
+              </form>
+            </div>
+          </div>
+        </div> 
 
-        .form-title span {
-            animation: flickering 2s linear infinite both;
-        }
 
-        .title-2 {
-            display: block;
-            margin-top: -0.5rem;
-            font-size: 2.1rem;
-            font-weight: 800;
-            font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
-            -webkit-text-stroke: #fff 0.1rem;
-            letter-spacing: 0.2rem;
-            color: transparent;
-            position: relative;
-            text-shadow: 0px 0px 16px #cecece;
-        }
+  <script>
+    function showPassword() {
+      var x = document.getElementById("password-input");
+      if (x.type === "password") {
+        x.type = "text";
+      } else {
+        x.type = "password";
+      }
+    }
+  </script>
 
-        .title-2 span::before,
-        .title-2 span::after {
-            content: "—";
-        }
+  <script>
+    document.onkeydown = function (e) {
+      if (event.keyCode == 123) {
+        return false;
+      }
+      if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+        return false;
+      }
+      if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+        return false;
+      }
+      if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+        return false;
+      }
+    }
+  </script>
 
-        @keyframes flickering {
 
-            0%,
-            100% {
-                opacity: 1;
-            }
 
-            41.99% {
-                opacity: 1;
-            }
-
-            42% {
-                opacity: 0;
-            }
-
-            43% {
-                opacity: 0;
-            }
-
-            43.01% {
-                opacity: 1;
-            }
-
-            47.99% {
-                opacity: 1;
-            }
-
-            48% {
-                opacity: 0;
-            }
-
-            49% {
-                opacity: 0;
-            }
-
-            49.01% {
-                opacity: 1;
-            }
-        }
-
-        /*---------shooting stars-----------*/
-
-        .bg-stars {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -2;
-            background-size: cover;
-            animation: animateBg 50s linear infinite;
-        }
-
-        @keyframes animateBg {
-
-            0%,
-            100% {
-                transform: scale(1);
-            }
-
-            50% {
-                transform: scale(1.2);
-            }
-        }
-
-        .star {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 4px;
-            height: 4px;
-            background: #fff;
-            border-radius: 50%;
-            box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.1),
-                0 0 0 8px rgba(255, 255, 255, 0.1), 0 0 20px rgba(255, 255, 255, 0.1);
-            animation: animate 3s linear infinite;
-        }
-
-        .star::before {
-            content: "";
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            width: 300px;
-            height: 1px;
-            background: linear-gradient(90deg, #fff, transparent);
-        }
-
-        @keyframes animate {
-            0% {
-                transform: rotate(315deg) translateX(0);
-                opacity: 1;
-            }
-
-            70% {
-                opacity: 1;
-            }
-
-            100% {
-                transform: rotate(315deg) translateX(-1000px);
-                opacity: 0;
-            }
-        }
-
-        .star:nth-child(1) {
-            top: 0;
-            right: 0;
-            left: initial;
-            animation-delay: 0s;
-            animation-duration: 1s;
-        }
-
-        .star:nth-child(2) {
-            top: 0;
-            right: 100px;
-            left: initial;
-            animation-delay: 0.2s;
-            animation-duration: 3s;
-        }
-
-        .star:nth-child(3) {
-            top: 0;
-            right: 220px;
-            left: initial;
-            animation-delay: 2.75s;
-            animation-duration: 2.75s;
-        }
-
-        .star:nth-child(4) {
-            top: 0;
-            right: -220px;
-            left: initial;
-            animation-delay: 1.6s;
-            animation-duration: 1.6s;
-        }
-    </style>
-</head>
-
-<body>
-    <form class="form">
-        <div class="form-title"><span>sign in to your</span></div>
-        <div class="title-2"><span>SPACE</span></div>
-        <div class="input-container">
-            <input placeholder="Email" type="email" class="input-mail" />
-            <span> </span>
-        </div>
-
-        <section class="bg-stars">
-            <span class="star"></span>
-            <span class="star"></span>
-            <span class="star"></span>
-            <span class="star"></span>
-        </section>
-
-        <div class="input-container">
-            <input placeholder="Password" type="password" class="input-pwd" />
-        </div>
-        <button class="submit" type="submit">
-            <span class="sign-text">Sign in</span>
-        </button>
-
-        <p class="signup-link">
-            No account?
-            <a class="up" href="">Sign up!</a>
-        </p>
-    </form>
-
-</body>
-
-</html>
+{% endblock %}
