added authentication check on home app

--- a/Old Code/login.html
+++ b/Old Code/login.html
@@ -94,7 +94,7 @@
                   <input type="password" placeholder="Password" required id="password">
                   <span class="show-password" onclick="togglePassword()">👁️</span>
                 </div>
-                <button type="submit">Login</button>
+                <button type="submit" id="login-btn">Login</button>
                 <a href="your-link-here" target="_blank" class="join-us">
                   Want To Become Angaari Aawam? <span class="orange-text">Join Us</span>
                 </a>
