updated the sending mail system

--- a/test.html
+++ b/test.html
@@ -1,22 +1,37 @@
 <html>
-    <body style="font-family: Arial, sans-serif; margin: 0; padding: 0;">
-        <div style="background: linear-gradient(to bottom, #1b1f23, #000000); padding: 25px; text-align: center; border-radius: 10px;">
-        <img src="demo_static/img/student/flames25.png" alt="The Angaar Batch Logo" style="width: 15%; margin-bottom: 20px;">
-        <h1 style="color: #ff6b35; text-shadow: 0 0 5px rgba(255,107,53,0.3);">🔥BIGGER, BETTER, BOLDER!🔥</h1>
-        <h2 style="color: #ffffff;">{name}, You're All Set!</h2>
-        <p style="color: #f8f8f8">{course_info}</p>
-        <div style="background-color: rgba(255,107,53,0.1); border-left: 4px solid #ff6b35; padding: 15px; margin: 20px 0; text-align: left;">
-            <p style="font-size: 17px; color: #f8f8f8; font-weight: bold;">The fire has been lit! Your payment is confirmed and your spot is secured.</p>
-            <p style="font-size: 16px; color: #dddddd;">Get ready to ignite your potential and transform your skills into blazing talent.</p>
+
+<body style="font-family: Arial, sans-serif; margin: 0; padding: 0;">
+    <div
+        style="background: linear-gradient(to bottom, #1b1f23, #000000); padding: 25px; text-align: center; border-radius: 10px;">
+        <img src="https://s6.imgcdn.dev/Y6D89g.png" alt="The Angaar Batch Logo"
+            style="width: 35%; margin-bottom: 20px; border-radius: 10px;">   
+
+
+        <h1 style="color: #ff6b35; text-shadow: 0 0 5px rgba(255,107,53,0.3);">🔥WELCOME TO FLAMES '25!🔥</h1>
+        <h2 style="color: #ffffff;">Join WhatsApp Group</h2>
+        <p style="color: #f8f8f8">For Those Who Are Ready To Take The Next Step</p>
+        <div
+            style="background-color: rgba(255,107,53,0.1); border-left: 4px solid #ff6b35; padding: 15px; margin: 20px 0; text-align: left;">
+            <p style="font-size: 17px; color: #f8f8f8; font-weight: bold;">Congratulations on securing your spot in
+                Flames '25 Industrial Training!</p>
+            <p style="font-size: 16px; color: #dddddd;">As a confirmed Angaari, We want you to talk to us and solve your doubts. Connect with trainers, receive important announcements, access resources, and
+                network with fellow participants in this industrial training journey.</p>
         </div>
-        <p style="font-size: 16px; color: #e0e0e0;">This is where ordinary coders become extraordinary developers.</p>
-        <p style="font-size: 16px; color: #e0e0e0;">Remember: The flame that burns brightest requires the most fuel. Bring your dedication!</p>
-        <a href="https://theangaarbatch.in/accounts/login" style="background-color: #ff6b35; color: #ffffff; text-decoration: none; padding: 12px 25px; border-radius: 5px; font-size: 16px; display: inline-block; margin-top: 25px; font-weight: bold; box-shadow: 0 4px 8px rgba(255, 107, 53, 0.5); transition: all 0.3s;">ACCESS YOUR DASHBOARD</a>
+        <a href="https://chat.whatsapp.com/CuSZyEww8FjBDItbfNxLJY"
+            style="background-color: #25D366; color: #ffffff; text-decoration: none; padding: 12px 25px; border-radius: 5px; font-size: 16px; display: inline-block; margin-top: 25px; font-weight: bold; box-shadow: 0 4px 8px rgba(37, 211, 102, 0.5); transition: all 0.3s;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="#ffffff"
+                style="vertical-align: middle; margin-right: 8px;">
+                <path
+                    d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z" />
+            </svg>
+            JOIN THE FLAMES '25 GROUP 🔥
+        </a>
         <div style="margin-top: 30px; padding-top: 20px; border-top: 1px solid rgba(255,255,255,0.2);">
-            <p style="font-size: 15px; color: #b0b0b0;">Mark your calendar! Classes begin soon. Check your dashboard for schedule details.</p>
             <p style="font-size: 14px; color: #b0b0b0;">Questions? Reach out to us at theangaarbatch@gmail.com</p>
-            <p style="font-size: 16px; color: #ff6b35; font-weight: bold; margin-top: 15px;">READY TO BURN BRIGHT! 🚀🔥</p>
+            <p style="font-size: 16px; color: #ff6b35; font-weight: bold; margin-top: 15px;">READY TO BURN BRIGHT! 🚀🔥
+            </p>
         </div>
-        </div>
-    </body>
-    </html>
+    </div>
+</body>
+
+</html>
