made some minor changes

--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
             <p style="font-size: 16px; color: #dddddd;">As a confirmed Angaari, We want you to talk to us and solve your doubts. Connect with trainers, receive important announcements, access resources, and
                 network with fellow participants in this industrial training journey.</p>
         </div>
-        <a href="https://chat.whatsapp.com/CuSZyEww8FjBDItbfNxLJY"
+        <a href="https://chat.whatsapp.com/CuSZyEww8FjBDItbfNxLJY" target="_blank"
             style="background-color: #25D366; color: #ffffff; text-decoration: none; padding: 12px 25px; border-radius: 5px; font-size: 16px; display: inline-block; margin-top: 25px; font-weight: bold; box-shadow: 0 4px 8px rgba(37, 211, 102, 0.5); transition: all 0.3s;">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="#ffffff"
                 style="vertical-align: middle; margin-right: 8px;">
